# sozo-tv

./: README.md  build.gradle.kts  gradle.properties  makedocs.ps1  makedocs.sh  settings.gradle.kts  subtitle.srt
.idea_backup/: modules.xml
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/docs/: index.html  navigation.html
app/docs/-sozo-tv/: package-list
app/docs/-sozo-tv/com.saikou.sozo_tv.adapters/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.aniskip/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.app/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.circleView/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.navigation/: index.html  match-destination.html  setup-with-nav-controller.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.pinview/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.resendTimer/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.spoiler/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.components.toggle/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.converter/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.data.local.dao/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.data.local.database/: index.html
app/docs/-sozo-tv/com.saikou.sozo_tv.data.local.entity/: index.html
app/docs/scripts/: pages.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
(+3031 files in other folders)
